--- a/Task Timer/Task Timer/MainWindow.xaml
+++ b/Task Timer/Task Timer/MainWindow.xaml
@@ -7,17 +7,12 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DockPanel LastChildFill="True">
-            <Label DockPanel.Dock="Top">Running Processes:</Label>
-            <ListView x:Name="ProcessBox" Margin="0" DockPanel.Dock="Top" SelectionMode="Extended" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Process Name" />
-                        <GridViewColumn Header="Memory Usage" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </DockPanel>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <DataGrid x:Name="ProcessBox" SelectionMode="Extended" ScrollViewer.HorizontalScrollBarVisibility="Hidden" GridLinesVisibility="None" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Process" Binding="{Binding ProcessName}" />
+                <DataGridTextColumn Header="Memory" Binding="{Binding Memory}" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
