--- a/Task Timer/Task Timer/MainWindow.xaml
+++ b/Task Timer/Task Timer/MainWindow.xaml
@@ -1,18 +1,29 @@
-﻿<Window x:Class="Task_Timer.MainWindow"
+﻿<Window x:Class="ProcessShutdownTimer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Task Timer" Height="284" Width="598" MinWidth="500" MinHeight="400">
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Title="Process Shutdown Timer" Height="284" Width="598" MinWidth="500" MinHeight="400" ResizeMode="CanMinimize">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="ProcessBox" SelectionMode="Extended" ScrollViewer.HorizontalScrollBarVisibility="Hidden" GridLinesVisibility="None" AutoGenerateColumns="False" IsReadOnly="True">
+        <DataGrid x:Name="ProcessBox" SelectionMode="Extended" ScrollViewer.HorizontalScrollBarVisibility="Hidden" GridLinesVisibility="None" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,0,0,33" CanUserReorderColumns="False" MinColumnWidth="50" CanUserResizeRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Process" Binding="{Binding ProcessName}" />
                 <DataGridTextColumn Header="Memory" Binding="{Binding Memory}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox Name="FilterInput" Height="23" Margin="0,318,0,0" TextWrapping="Wrap" TextChanged="TextBox_TextChanged" VerticalAlignment="Top">
+            <TextBox.ToolTip>
+                <Label>Filter process names</Label>
+            </TextBox.ToolTip>
+        </TextBox>
+        <DockPanel Grid.Column="1" Margin="5,0,0,0" >
+            <xctk:TimePicker Name="TimePickerBox" Grid.Column="1" VerticalAlignment="Top" Margin="0" Format="LongTime" DockPanel.Dock="Top" />
+            <Button Content="Set Timer" Grid.Column="1" DockPanel.Dock="Top" Margin="0,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" HorizontalAlignment="Right"/>
+            <Label Content="Scheduled:" DockPanel.Dock="Top" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,5,0,0"/>
+            <ListBox x:Name="ScheduledBox" DockPanel.Dock="Top"/>
+        </DockPanel>
     </Grid>
 </Window>
