Started adding radio buttons

--- a/Process Shutdown Timer/Task Timer/MainWindow.xaml
+++ b/Process Shutdown Timer/Task Timer/MainWindow.xaml
@@ -29,8 +29,20 @@
             </TextBox.ToolTip>
         </TextBox>
         <DockPanel Grid.Column="1" Margin="5,0,0,0" >
-            <xctk:TimePicker Name="TimePickerBox" Grid.Column="1" VerticalAlignment="Top" Margin="0" Format="LongTime" DockPanel.Dock="Top" />
-            <Button Content="Set Timer" Grid.Column="1" DockPanel.Dock="Top" Margin="0,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" HorizontalAlignment="Right"/>
+            <RadioButton VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" DockPanel.Dock="Top" IsChecked="True">
+                <xctk:TimePicker Name="TimePickerBox" Margin="0" Format="LongTime" VerticalAlignment="Center" />
+            </RadioButton>
+            <RadioButton VerticalContentAlignment="Center" Margin="0,5,0,0" DockPanel.Dock="Top">
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Name="Hours" Width="30" VerticalAlignment="Center" PreviewTextInput="Time_PreviewTextInput" >0</TextBox>
+                    <Label>Hours</Label>
+                    <TextBox Name="Minutes" Width="30" VerticalAlignment="Center" PreviewTextInput="Time_PreviewTextInput">0</TextBox>
+                    <Label>Minutes</Label>
+                    <TextBox Name="Seconds" Width="30" VerticalAlignment="Center" PreviewTextInput="Time_PreviewTextInput">0</TextBox>
+                    <Label>Seconds</Label>
+                </StackPanel>
+            </RadioButton>
+            <Button Content="Set Timer" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" HorizontalAlignment="Right" DockPanel.Dock="Top"/>
             <Label Content="Scheduled:" DockPanel.Dock="Top" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,5,0,0"/>
             <ListBox x:Name="ScheduledBox" DockPanel.Dock="Top"/>
         </DockPanel>
